--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "graphql": "^0.11.3",
     "node-fetch": "^1.7.3",
     "query-string": "^5.0.0"
+  },
+  "devDependencies": {
+    "supersniff": "^1.0.0"
   }
 }
